# Napredne-tehnike-programiranja

./: README.md
AdminService/: go.mod  main.go
AdminService/adapter/: adapter.go
AdminService/config/: config.go
AdminService/dataService/: dataService.go
AdminService/model/: model.go
AdminService/router/: router.go
ApiGateway/: go.mod  go.sum  main.go
ApiGateway/handlers/: RepairmanServiceHandler.go  adminServiceHandler.go  emailHandler.go  userServiceHandler.go
ApiGateway/router/: router.go
ApiGateway/utils/: utils.go
RepairmanService/: go.mod  main.go
RepairmanService/adapter/: adapter.go
RepairmanService/config/: config.go
RepairmanService/dataService/: dataSerice.go
RepairmanService/model/: model.go
RepairmanService/router/: router.go
UserService/: go.mod  go.sum  main.go
UserService/adapter/: adapter.go
UserService/cmd/: go.mod  go.sum  main.go
UserService/config/: config.go  dbConfig.go
UserService/configuration/: configuration.go
UserService/dataService/: dataService.go
UserService/dataservice/: dataservice.go
UserService/model/: dto.go  mapper.go  model.go
UserService/router/: router.go
emailService/: Cargo.toml
emailService/src/: main.rs
front/: angular.json  package-lock.json  package.json  proxy.conf.json
front/front/: package-lock.json
front/src/modules/admin/: admin.module.ts  admin.routes.ts
front/src/modules/app/: app-routing.module.ts  app.module.ts
front/src/modules/employee/: employee.module.ts  employee.routes.ts
front/src/modules/repairman/: repairman.module.ts  repairman.routes.ts
(+80 files in other folders)
